crates/ruff_python_parser/tests/snapshots/invalid_syntax@single_star_yield.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/single_star_yield.py
---
## AST

```
Module(
    ModModule {
        range: 0..18,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..17,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..7,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 9..17,
                                value: Yield(
                                    ExprYield {
                                        range: 9..17,
                                        value: Some(
                                            Starred(
                                                ExprStarred {
                                                    range: 15..17,
                                                    value: Name(
                                                        ExprName {
                                                            range: 16..17,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | def f(): yield *x
  |                ^^ Syntax Error: can't use starred expression here
  |
